# temple-osrs

./: Cargo.toml  README.md
src/: main.rs  tui.rs
src/api/: mod.rs  types.rs
